pom.xml: Add maven-release-plugin