@@ -13,12 +13,19 @@
     <url>https://github.com/killbill/testing-mysql-server</url>
 
     <scm>
-        <connection>git@github.com:killbill/testing-mysql-server.git</connection>
-        <url>https://github.com/killbill/testing-mysql-server</url>
+        <connection>scm:git:git://github.com:killbill/testing-mysql-server.git</connection>
+        <developerConnection>scm:git:git@github.com:killbill/testing-mysql-server.git</developerConnection>
+        <url>https://github.com/killbill/testing-mysql-server/tree/main</url>
     </scm>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <reload4j.version>1.2.24</reload4j.version>
+        <release.auto-version-submodules>true</release.auto-version-submodules>
+        <release.preparation-goals>clean verify</release.preparation-goals>
+        <release.push-changes>true</release.push-changes>
+        <release.release-profiles>sonatype-oss-release</release.release-profiles>
+        <release.tag-name-format>@{project.artifactId}-@{project.version}</release.tag-name-format>
         <repository.release.id>sonatype-nexus-staging</repository.release.id>
         <repository.release.name>Nexus Release Repository</repository.release.name>
         <repository.release.url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</repository.release.url>
@@ -82,6 +89,20 @@
     </dependencies>
 
     <build>
+
+        <extensions>
+            <extension>
+                <groupId>org.apache.maven.scm</groupId>
+                <artifactId>maven-scm-provider-gitexe</artifactId>
+                <version>1.13.0</version>
+            </extension>
+            <extension>
+                <groupId>org.apache.maven.scm</groupId>
+                <artifactId>maven-scm-manager-plexus</artifactId>
+                <version>1.13.0</version>
+            </extension>
+        </extensions>
+
         <plugins>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -108,6 +129,85 @@
                     <target>11</target>
                 </configuration>
             </plugin>
+            <plugin>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>3.0.1</version>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                        <configuration>
+                            <gpgArguments>
+                                <arg>--pinentry-mode</arg>
+                                <arg>loopback</arg>
+                            </gpgArguments>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>3.0.0-M6</version>
+                <configuration>
+                    <releaseProfiles>sonatype-oss-release</releaseProfiles>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                    <mavenExecutorId>forked-path</mavenExecutorId>
+                    <pushChanges>true</pushChanges>
+                    <localCheckout>true</localCheckout>
+                    <preparationGoals>clean verify</preparationGoals>
+                    <tagNameFormat>${release.tag-name-format}</tagNameFormat>
+                    <useReleaseProfile>false</useReleaseProfile>
+                    <goals>deploy</goals>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.4.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                        <configuration>
+                            <quiet>true</quiet>
+                            <source>11</source>
+                            <release>11</release>
+                            <encoding>UTF-8</encoding>
+                            <maxmemory>1024m</maxmemory>
+                            <additionalOptions>-Xdoclint:none</additionalOptions>
+                        </configuration>
+                    </execution>
+                </executions>
+                <configuration>
+                    <quiet>true</quiet>
+                    <source>11</source>
+                    <release>11</release>
+                    <encoding>UTF-8</encoding>
+                    <maxmemory>1024m</maxmemory>
+                    <additionalOptions>-Xdoclint:none</additionalOptions>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M7</version>
+                <configuration>
+                    <argLine>-Xmx1024m --illegal-access=permit</argLine>
+                    <runOrder>random</runOrder>
+                    <skipTests>false</skipTests>
+                    <useManifestOnlyJar>false</useManifestOnlyJar>
+                    <trimStackTrace>false</trimStackTrace>
+                    <systemPropertyVariables>
+                        <user.timezone>GMT</user.timezone>
+                        <org.slf4j.simpleLogger.showDateTime>true</org.slf4j.simpleLogger.showDateTime>
+                        <org.slf4j.simpleLogger.dateTimeFormat>yyyy-MM-dd'T'HH:mm:ss.SSSZ</org.slf4j.simpleLogger.dateTimeFormat>
+                        <killbill.test.use.connection.pool>false</killbill.test.use.connection.pool>
+                    </systemPropertyVariables>
+                </configuration>
+            </plugin>
         </plugins>
 
         <resources>
@@ -129,4 +229,33 @@
             <url>${repository.snapshot.url}</url>
         </snapshotRepository>
     </distributionManagement>
+    <profiles>
+        <profile>
+            <id>sonatype-oss-release</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                    </plugin>
+                    <!-- Sonatype requires a Javadoc jar -->
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <skipTests>true</skipTests>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.sonatype.plugins</groupId>
+                        <artifactId>nexus-staging-maven-plugin</artifactId>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
